--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
-    "next": "^11.1.3",
+    "next": "^13.1.1",
     "next-images": "^1.8.4",
-    "next-mdx-remote": "^3.0.8",
+    "next-mdx-remote": "^4.2.1",
     "next-transpile-modules": "^9.0.0",
     "object-path": "^0.11.8",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-pdf": "^5.6.0",
